# realtime-chat

./: .env  .gitignore  main.py  pyproject.toml
services/auth_service/: schemas.py  service.py
services/chat_service/: service.py
services/routes/: users.py
services/user_service/: schemas.py  service.py
