[tool.poetry]
name = "real-time-chat"
version = "0.1.0"
description = "this is a practice project"
authors = ["Josue Angel Ferro Quispe"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
pyjwt = "^2.10.1"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
