[tool.poetry]
name = "real-time-chat"
version = "0.1.0"
description = "this is a practice project"
authors = ["Josue Angel Ferro Quispe"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.8"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
websockets = "^15.0"
openai = "^1.65.3"
langchain = "^0.3.20"
langgraph = "^0.3.5"
langchain-openai = "^0.3.7"
pymongo = "^4.11.2"
redis = "^6.0.0"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
