[tool.poetry]
name = "real-time-chat"
version = "0.1.0"
description = "this is a practice project"
authors = ["Josue Angel Ferro Quispe"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<=3.13.3"
fastapi = {extras = ["standard"], version = "^0.115.12"}
pyjwt = "^2.10.1"
passlib = "^1.7.4"
websockets = "^15.0"
openai = "^1.65.3"
langchain = "^0.3.20"
langgraph = "^0.3.5"
langchain-openai = "^0.3.7"
pymongo = "^4.11.2"
redis = "^6.0.0"
uuid = "^1.30"
ruff = "^0.11.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]


line-length = 88
indent-width = 4


[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []